[package]
name = "simple_ga"
version = "0.0.0"
edition = "2021"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
rand = "0.8"
rand_distr = "0.4"
itertools = "0.13"
tracing = { version = "0.1", features = ["log"] }
derivative = "2.2"
