[package]
name = "simple_ga"
version = "0.0.0"
edition = "2021"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]

[workspace]
members = ["crates/*"]

[dev-dependencies]
simple_ga_internal_lib = { path = "crates/simple_ga_internal_lib" }
rstest = "0.19"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
itertools = "0.13"
tracing = { version = "0.1", features = ["log"] }
derivative = "2.2"
statrs = "0.16"
