[package]
name = "simple_ga"
version = "0.0.0"
edition = "2021"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]

[workspace]
members = ["crates/*"]

[features]
parallel = ["dep:rayon", "dep:dashmap"]

[dev-dependencies]
simple_ga_internal_lib = { path = "crates/simple_ga_internal_lib" }
rstest = "0.19"
lazy_static = "1.4.0"
smallvec = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dependencies]
rand = "0.8"
rand_distr = "0.4"
itertools = "0.13"
tracing = { version = "0.1", features = ["log"] }
derivative = "2.2"
statrs = "0.16"
rayon = { version = "1", optional = true }
dashmap = { version = "5", optional = true, features = ["rayon"] }

[[example]]
name = "pi"

[[example]]
name = "sudoku"

[[example]]
name = "traveling_sales_person"

[[example]]
name = "keystone_party"